Add support for specifying a template file used when creating a new submission document. Styles from the template file are copied to the new document.

--- a/Source/Panama/Resources/Dictionary/Values.xaml
+++ b/Source/Panama/Resources/Dictionary/Values.xaml
@@ -62,8 +62,8 @@
     <filter:TagFilterCombine x:Key="FilterTagCombineAnd">And</filter:TagFilterCombine>
     <filter:TagFilterCombine x:Key="FilterTagCombineAndNot">AndNot</filter:TagFilterCombine>
 
-    <con:FolderEditType x:Key="FolderEditTypeFileSystem">FileSystem</con:FolderEditType>
-    <con:FolderEditType x:Key="FolderEditTypeMapi">Mapi</con:FolderEditType>
+    <con:PathSelectorType x:Key="FolderEditTypeFileSystem">FileSystem</con:PathSelectorType>
+    <con:PathSelectorType x:Key="FolderEditTypeMapi">Mapi</con:PathSelectorType>
     
     <cv:BooleanToVisibilityConverterOptions x:Key="BooleanTrueToVisibility">TrueToVisibility</cv:BooleanToVisibilityConverterOptions>
     <cv:BooleanToVisibilityConverterOptions x:Key="BooleanFalseToVisibility">FalseToVisibility</cv:BooleanToVisibilityConverterOptions>
