--- a/Source/Panama/Controls/ConfigEdit/PathSelector.xaml
+++ b/Source/Panama/Controls/ConfigEdit/PathSelector.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl 
-    x:Class="Restless.App.Panama.Controls.FolderEdit"
+    x:Class="Restless.App.Panama.Controls.PathSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,9 +7,10 @@
     mc:Ignorable="d" 
     Name="PART_Control"
     d:DesignHeight="70" d:DesignWidth="600">
-    <Grid>
+    <Grid Margin="0,0,0,4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -20,11 +21,14 @@
         <TextBlock 
             Grid.Column="0" Grid.Row="0"
             Style="{StaticResource TextBlockLabel}"
+            Margin="0,0,0,4"
             Text="{Binding Title, ElementName=PART_Control}"/>
         <TextBox 
             Grid.Column="0" Grid.Row="1"
             Style="{StaticResource TextBoxFolderName}"
-            Text="{Binding Folder, ElementName=PART_Control}"/>
-        <Button Grid.Column="1" Grid.Row="1" MinWidth="92" Margin="8" VerticalAlignment="Center" Click="ButtonChangeClick">Change</Button>
+            Text="{Binding PathName, ElementName=PART_Control}"/>
+
+        <Button Grid.Column="1" Grid.Row="1" MinWidth="2" Margin="4,1" Width="65" VerticalAlignment="Top" Click="ButtonChangeClick">Change</Button>
+        <Button x:Name="PART_ButtonClear" Grid.Column="2" Grid.Row="1" MinWidth="2" Margin="4,1" Width="65" VerticalAlignment="Top" Click="ButtonClearClick">Clear</Button>
     </Grid>
 </UserControl>
