Initial checkin for EML branch. Implement submission messages as external EML files

--- a/Source/Panama/View/ConfigView.xaml
+++ b/Source/Panama/View/ConfigView.xaml
@@ -79,6 +79,7 @@
                 <con:PathSelector Title="Title Root" PathName="{Binding Config.FolderTitleRoot}"/>
                 <con:PathSelector Title="Title Version" PathName="{Binding Config.FolderTitleVersion}"/>
                 <con:PathSelector Title="Submission Documents" PathName="{Binding Config.FolderSubmissionDocument}"/>
+                <con:PathSelector Title="Submission Messages" PathName="{Binding Config.FolderSubmissionMessage}"/>
                 <con:PathSelector Title="Submission Message Attachments" PathName="{Binding Config.FolderSubmissionMessageAttachment}"/>
                 <con:PathSelector Title="Export" PathName="{Binding Config.FolderExport}"/>
                 <con:PathSelector Title="Mapi Messages" PathName="{Binding Config.FolderMapi}" SelectorType="Mapi"/>
